[gd_scene load_steps=3 format=2]

[ext_resource path="res://4.Enemies/Dragon Boss/Battery/Battery Cell.tscn" type="PackedScene" id=1]
[ext_resource path="res://4.Enemies/Dragon Boss/Battery/Battery.gd" type="Script" id=2]

[node name="Battery" type="Node2D"]
script = ExtResource( 2 )

[node name="Battery Cell" parent="." instance=ExtResource( 1 )]
position = Vector2( 4, 4 )

[node name="Battery Cell2" parent="." instance=ExtResource( 1 )]
position = Vector2( -4, 4 )

[node name="Battery Cell3" parent="." instance=ExtResource( 1 )]
position = Vector2( -4, -4 )

[node name="Battery Cell4" parent="." instance=ExtResource( 1 )]
position = Vector2( 4, -4 )

[node name="Glimmer Timer" type="Timer" parent="."]
one_shot = true

[node name="Hit Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
